# paruman

./: .gitignore  .pre-commit-config.yaml  Brand_Guidelines.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  docker-compose.yml
.github/workflows/: build.yml  lint.yml  test.yml
backend/: Cargo.toml
backend/migrations/: 20260309_01_init.sql  20260309_02_seed_org_units.sql
backend/src/: blockchain.rs  config.rs  identity.rs  main.rs
contracts/: README.md
contracts/kawenang/: Cargo.toml  lib.rs
contracts/musyawarah/: Cargo.toml  lib.rs
docs/: ARCHITECTURE.md  governance.md
frontend/: package.json  pnpm-lock.yaml
shared-types/: Cargo.toml
shared-types/src/: lib.rs
