[package]
name = "musyawarah"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.1", default-features = false, features = ["ink-as-dependency"] }
ink_primitives = { version = "5.1", default-features = false }
ink_prelude = { version = "5.1", default-features = false }
ink_storage = { version = "5.1", default-features = false }
ink_env = { version = "5.1", default-features = false }
ink_lang = { version = "5.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
scale-info = { version = "2.12", default-features = false, features = ["derive"], optional = true }

[lib]
name = "musyawarah"
path = "lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "ink_storage/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
